<?xml version="1.0" encoding="UTF-8" ?>

<resources>
  <string name="accountAdd">Add account</string>
  <string name="accountCancel">Cancel</string>
  <string name="accountCardCreatorLabel">Don\'t have a library card?</string>
  <string name="accountCardCreatorSignUp">Create Card</string>
  <string name="accountCOPPADeleteBooks">Delete books?</string>
  <string name="accountCOPPADeleteBooksConfirm">Changing your age will remove all books downloaded from the current account.</string>
  <string name="accountAgeVerification">Age Verification</string>
  <string name="accountCreationFailed">Account creation failed</string>
  <string name="accountCreationFailedMessage">The account could not be created.</string>
  <string name="accountDelete">Delete</string>
  <string name="accountEULAStatement">I agree to the terms of the End User License Agreement.</string>
  <string name="accountLogin">Log in</string>
  <string name="accountWantChildCard">Want a card for your child?</string>
  <string name="accountCreateCard">Create Card</string>
  <string name="accountLoginAlternatives">Alternative Login Methods</string>
  <string name="accountLoginRequired">Please log in to continue.</string>
  <string name="accountLoginWith">Log in with %1$s</string>
  <string name="accountLogout">Log out</string>
  <string name="accountPassword">Password</string>
  <string name="accountPasswordShow">Show %1$s</string>
  <string name="accountPickerTitle">Switch catalog</string>
  <string name="accountPlaceholder">Lorem ipsum dolor sit amet, probatus volutpat has at, vis adhuc iuvaret omittantur an, sadipscing conclusionemque his ad. Eam ut simul tempor. Primis consetetur appellantur vim eu, eum an iudico dolorum. Ad vis utamur honestatis, sanctus debitis referrentur an eam.</string>
  <string name="accountRegistryCreating">Creating an account…</string>
  <string name="accountRegistryEmpty">No accounts are available.</string>
  <string name="accountRegistryRefresh">Refresh</string>
  <string name="accountRegistryRetrieving">Retrieving accounts from registry…</string>
  <string name="accountRegistrySelect">Please select a library…</string>
  <string name="accountRegistryNoLocation">You can search for your library by name, branch location, or your own location.</string>
  <string name="accountReportIssue">Report an issue…</string>
  <string name="accounts">Accounts</string>
  <string name="accountsDelete">@string/accountDelete</string>
  <string name="accountsDeleteConfirm">Are you sure you want to remove \"%1$s\" from this device?</string>
  <string name="accountsDeleteConfirmTitle">Remove account</string>
  <string name="accountsDeletionFailed">Account deletion failed</string>
  <string name="accountsDeletionFailedMessage">The account could not be deleted.</string>
  <string name="accountsDetails">Details</string>
  <string name="accountSyncBookmarks">Sync bookmarks</string>
  <string name="accountUserName">User Name</string>
  <string name="accountCustomOPDS">Custom OPDS Feed URL</string>
  <string name="currentlyBrowsing">You\'re currently browsing</string>
  <string name="accountSAML20NoAccessToken">Failed to retrieve an access token from the URI: %1$s</string>
  <string name="accountSAML20NoPatronInfo">Failed to retrieve patron info from the URI: %1$s</string>
  <string name="accountSearchHint">Search accounts&#8230;</string>
  <string name="accountMore">More options</string>
  <string name="accountReportFailed">Sorry, we weren\'t able to find a usable email app. Please send email to %1$s if you need to report an issue.</string>

  <string name="oeLoginGetStarted">Get Started</string>
  <string name="oeLoginAccessCollection">Login to access the collection.</string>
  <string name="and"> and </string>
  <string name="signInWithClever">&#160;&#160;&#160;Sign in with Clever</string>
  <string name="signInWithFirstBook">&#160;&#160;&#160;Sign in with First Book</string>
  <string name="signIn">Sign in</string>
  <string name="signInHeader">Sign In</string>
  <string name="signOut">Sign out</string>
  <string name="accessCode">Access Code</string>
  <string name="termsOfUse"><u>Terms of Use</u></string>
  <string name="privacyNotice"><u>Privacy Notice</u></string>
  <string name="faq"><u>Frequently asked questions</u></string>
  <string name="troubleSigningIn"><u>Having trouble signing in?</u></string>
  <string name="pin">PIN</string>

  <!-- Content Descriptions -->
  <string name="contentDescOpenEbooksLogo">Open eBooks logo</string>
  <string name="contentDescFirstBookLogo">First Book logo</string>
  <string name="contentDescProgressLoader">Progress loader</string>
  <string name="contentDescBackButton">Back button</string>
  <string name="reportAnIssue">Report an issue</string>
  <string name="supportEmail"><u>info@openebooks.org</u></string>
  <string name="settings">Settings</string>
</resources>
