<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/accountTitleAnnounce"
      android:layout_width="match_parent"
      android:layout_height="48dp">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/accountLoginRequired"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/account_cell" />

    <Space
      android:layout_width="match_parent"
      android:layout_height="16dp" />

    <include layout="@layout/auth" />

    <CheckBox
      android:id="@+id/accountEULACheckbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:gravity="center"
      android:text="@string/accountEULAStatement"
      android:textSize="12sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/accountLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ProgressBar
        android:id="@+id/accountLoginProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/accountLoginProgressText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="center|center_horizontal"
        android:maxLines="2"
        android:text="@string/accountPlaceholder"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountLoginProgress" />

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accountLoginProgressText">

        <Space
          android:id="@+id/accountLoginButtonSpaceStart"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.5" />

        <Button
          android:id="@+id/accountLoginButtonErrorDetails"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_marginEnd="16dp"
          android:layout_weight="1"
          android:enabled="true"
          android:lines="1"
          android:text="@string/errorDetailsTitle"
          android:visibility="visible" />

        <Button
          android:id="@+id/accountLoginButton"
          android:layout_width="0dp"
          android:layout_height="48dp"
          android:layout_marginEnd="16dp"
          android:layout_weight="1"
          android:enabled="true"
          android:lines="1"
          android:text="@string/accountLogin"
          android:visibility="visible" />

        <Space
          android:id="@+id/accountLoginButtonSpaceEnd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.5" />

      </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
      android:id="@+id/accountAuthAlternatives"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:visibility="visible">

      <TextView
        android:id="@+id/accountAuthAlternativesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/accountLoginAlternatives"
        android:textStyle="bold" />

      <LinearLayout
        android:id="@+id/accountAuthAlternativesButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/accountPlaceholder" />
      </LinearLayout>
    </LinearLayout>

    <View
      android:layout_width="match_parent"
      android:layout_height="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/accountCardCreator"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone">

      <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/accountCardCreatorLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/accountCardCreatorLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/accountCardCreatorSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <Button
        android:id="@+id/accountCardCreatorSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/accountCardCreatorSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/accountSyncBookmarks"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/accountSyncBookmarksLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:labelFor="@id/accountSyncBookmarksCheck"
        android:text="@string/accountSyncBookmarks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/accountSyncBookmarksCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <Switch
        android:id="@+id/accountSyncBookmarksCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:label="@id/accountSyncBookmarksLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/accountReportIssue"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/selectableItemBackground">

      <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/accountReportIssueText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/accountReportIssue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </LinearLayout>
</ScrollView>

